[metadata]
name = mistral_k8s_actions
author = HongXianJun
author-email = xianjun666@dcn.ssu.ac.kr
summary = Test a K8S action code.
description-file = README.md
home-page = https://github.com/xianjun666/mistral_K8S_action
license = Apache-2
classifier =
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Internet
    Topic :: Utilities

[files]
packages =
    mistral_k8s_actions

[wheel]
universal = 1

[entry_points]
mistral.actions =
    k8s = mistral_k8s_actions:K8sAction
